--- a/template/base.html
+++ b/template/base.html
@@ -296,15 +296,18 @@
         /* Popup message styles */
         .popup-message {
             display: none;
+            justify-content: center;
+            align-items: center;
             position: fixed;
-            padding: 10px 20px;
-            top: 150px;
-            right: 22.5px;
-            color: #28a745;
-            border-radius: 5px;
+            width: 100%;
+            height: 100vh;
+            top: 0;
+            background-color: #2a2929ba;
+            color: white;
             animation: fadeInOut 1s ease;
-            z-index: 2;
-            font-size: x-large;
+            z-index: 999;
+            backdrop-filter: blur(3px);
+            
         }
 
         @keyframes fadeInOut {
@@ -401,12 +404,6 @@
                 position: static !important;
                 margin-top: 0;
             }
-
-            .popup-message {
-                bottom: 70px;
-                right: 20px;
-                top: auto;
-            }
         }
     </style>
 </head>
@@ -426,6 +423,11 @@
             </div>
             <div class="navbar-collapse collapse" id="navbarNav">
                 <ul class="nav navbar-nav navbar-right ml-auto">
+                    <form action="{% url 'product_search' %}" method="get" class="navbar-search d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search for products"
+                            aria-label="Search" name="q">
+                        <button class="btn btn-navbar" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    </form>
                     <li class="nav-item active">
                         <a class="nav-link" href="/">Home</a>
                     </li>
@@ -447,11 +449,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/contact/">Contact Us</a>
                     </li>
-                    <form action="{% url 'product_search' %}" method="get" class="navbar-search d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search for products"
-                            aria-label="Search" name="q">
-                        <button class="btn btn-navbar" type="submit">Search</button>
-                    </form>
                     {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -480,7 +477,6 @@
     </nav>
 
     <div class="cart display-mobile">
-        <div class="popup-message">+1🥳🎉</div>
         <a href="/store/cart/"><i class="fas fa-shopping-cart cart-icon"></i></a>
         <div id="cart-contact" class="visually-hidden"
             style="display: flex;justify-content:space-evenly;align-items: center;">
@@ -531,7 +527,6 @@
 
     <div class="cart display-desktop">
         <a href="/store/cart/"><i class="fas fa-shopping-cart cart-icon"></i></a>
-        <div class="popup-message">+1🥳🎉</div>
         <ul class="nav navbar-nav navbar-right ml-auto">
             <li class="nav-item">
                 <a class="nav-link mx-3" href="/store/products/">Store</a>
@@ -578,6 +573,12 @@
 
 
     <section class="body-container">
+        <div class="popup-message">
+            <div style="background-color: white;border-radius: 50%;">
+                <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
+                <dotlottie-player src="https://lottie.host/a242d67d-91df-44df-ae3e-6facf350a0d2/e5VlSS7qpq.json" background="transparent" speed="1" style="width: 150px; height: 150px;" loop autoplay></dotlottie-player>
+            </div>
+        </div>
         {% block body %}{% endblock body %}
     </section>
 
@@ -767,7 +768,7 @@
 
                     // Show popup messages
                     popupMessages.forEach(function (div) {
-                        div.style.display = 'block';
+                        div.style.display = 'flex';
                     });
 
                     // Remove the classes after the animation duration
@@ -781,7 +782,7 @@
                         popupMessages.forEach(function (div) {
                             div.style.display = 'none';
                         });
-                    }, 1000); // Adjust the time based on your animation duration
+                    }, 3500); // Adjust the time based on your animation duration
                 });
             });
         });
