--- a/template/store/product_list.html
+++ b/template/store/product_list.html
@@ -92,6 +92,7 @@ Products
                                 <div class="carousel-inner">
                                     {% for media in product.media_set.all %}
                                         <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                                            <a href="{% url 'product_detail' product_id=product.id %}">
                                             {% if media.media_type == 'image' %}
                                                 <img src="{{ media.media_url }}" class="d-block w-100 card-img-top" alt="Product Image">
                                             {% elif media.media_type == 'video' %}
@@ -100,6 +101,7 @@ Products
                                                     Your browser does not support the video tag.
                                                 </video>
                                             {% endif %}
+                                        </a>
                                         </div>
                                     {% endfor %}
                                 </div>
